Fix css issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1227,7 +1227,7 @@ input[type='checkbox']:checked {
     left: 0;
     width: 100%;
     /* height: 100px; */
-    height: 645px;
+    height: 625px;
     background-color: #F6F6F6;
     /* z-index: 99; */
     /* position: relative; */
